# pjurominer

./: CMakeLists.txt  MinerWorker.cpp  MinerWorker.h  MiningCommon.cpp  MiningCommon.h  RandomXHasher.cpp  RandomXHasher.h  RandomXManager.cpp  RandomXManager.h  StratumClient.cpp  StratumClient.h  main.cpp
